Show overflow. Remove stray comma. Fix #219.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,7 +3,6 @@ html,body {
 }
 body {
   background-color: #333;
-  overflow: hidden; /* Questionable: It's useful to have scratch space below you can scroll to. */
 }
 
 /* Flex grid items */
